use fly dockerfile

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,18 +1,7 @@
-tests
-dist
-coverage
+fly.toml
+Dockerfile
+.dockerignore
 node_modules
-jest.config.ts
-README.md
-LICENSE
-.vscode
-.github
-.env
 .git
-.env_template
-.gitignore
-.prettierrc
-.prettierignore
-.babelrc
-.eslintignore
-.eslintrc.json
+wintun.dll
+flyctl.exe
