--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   },
   "author": "Kalle Perälä",
   "license": "MIT",
+  "engines": {
+    "node": ">=18"
+  },
   "dependencies": {
     "@types/jest": "^29.2.0",
     "@types/node": "^18.11.0",
